[gd_scene format=3 uid="uid://dda4ddbxjw20a"]

[ext_resource type="Script" uid="uid://bhn204tads38g" path="res://Scripts/tela_game_over.gd" id="1_k17kg"]
[ext_resource type="Texture2D" uid="uid://cbtglje8auacc" path="res://Assets/GameOver/DerrotaJogo.png" id="2_jos3i"]
[ext_resource type="FontFile" uid="uid://bjp6li56in5vp" path="res://Assets/Menu/Eater-Regular.ttf" id="3_k6eyx"]
[ext_resource type="AudioStream" uid="uid://cux6e4yapl5jl" path="res://Assets/Sons/Interface/touch.wav" id="4_1ov0e"]
[ext_resource type="AudioStream" uid="uid://bp2axmsop6n66" path="res://Assets/Sons/Musica/GameOver.mp3" id="5_1tcra"]

[sub_resource type="LabelSettings" id="LabelSettings_k766o"]
font = ExtResource("3_k6eyx")
font_size = 65
font_color = Color(0.97555643, 0.0010456406, 0.00057391106, 1)

[node name="TelaGameOver" type="Control" unique_id=1463914269]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k17kg")

[node name="TextureRect" type="TextureRect" parent="." unique_id=660658279]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jos3i")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="." unique_id=1855641880]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6039216)

[node name="Label" type="Label" parent="." unique_id=446353891]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.5
offset_top = 74.0
offset_right = 255.5
offset_bottom = 196.0
grow_horizontal = 2
text = "VocÃª perdeu!"
label_settings = SubResource("LabelSettings_k766o")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1677153965]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnReiniciar" type="Button" parent="VBoxContainer" unique_id=768655626]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jogar Novamente"

[node name="BtnMenu" type="Button" parent="VBoxContainer" unique_id=2019849686]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Voltar ao Menu"

[node name="SfxHover" type="AudioStreamPlayer" parent="." unique_id=1521254610]
stream = ExtResource("4_1ov0e")
volume_db = -25.0

[node name="MusicaFundo" type="AudioStreamPlayer" parent="." unique_id=329083035]
stream = ExtResource("5_1tcra")
volume_db = -5.0
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/BtnReiniciar" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BtnReiniciar" to="." method="_on_btn_reiniciar_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/BtnMenu" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BtnMenu" to="." method="_on_btn_menu_pressed"]
